--- a/your_settings.json
+++ b/your_settings.json
@@ -1,5 +1,5 @@
 {
-    "token": "NTE1ODg2OTIwNTg1MzE0MzM0.Du8LiQ.hvC9E_YrH_CvHv_yzVKLQl7fmWQ",
+    "token": "NTIyMDcwMzA3NjM3NDI4MjM3.DvLqcg.LOgbBxu_uJOarDJMSvJxvhg-FWY",
     "prefix": "!",
     "rainbowdelay": 200,
     "rainbowcommand": "rainbow",
